# rsocket-rust-wasm-example

./: .gitignore  Cargo.toml  README.md  index.html  index.js  justfile  package.json  webpack.config.js
src/: lib.rs
