[package]
name = "rsocket_rust_wasm_example"
version = "0.1.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = "0.4.8"
js-sys = "0.3.35"
futures-channel = "0.3.4"
futures-util = "0.3.4"
bytes = "0.5.4"
serde = "1.0.104"
serde_derive = "1.0.104"
rsocket_rust = "0.5.0"
rsocket_rust_transport_wasm = "0.5.0"

[dependencies.wasm-bindgen]
version = "0.2.58"
features = ["serde-serialize"]
