[package]
name = "rsocket_rust_wasm_example"
version = "0.1.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"
futures-channel = "0.3.5"
futures-util = "0.3.5"
bytes = "0.5.6"
serde = "1.0.116"
serde_derive = "1.0.116"

[dependencies.rsocket_rust]
path = "../rsocket-rust/rsocket"

[dependencies.rsocket_rust_transport_wasm]
path = "../rsocket-rust/rsocket-transport-wasm"

[dependencies.wasm-bindgen]
version = "0.2.68"
features = ["serde-serialize"]
